[package]
edition = "2024"
name = "f_held"
version = "0.1.0"
authors = ["filo <nishn.giorgi@gmail.com>"]
resolver = "2"

[[bin]]
name = "f_held"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.4", features = ["defmt", "stm32l476rg", "unstable-pac", "memory-x", "time-driver-any" ]  }
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
